--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
 
   <title>voicemate</title>
   <link rel="manifest" href="manifest.json">
+
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="470422928140-qn6tf5ltoehpua9uasvl0585o2kf0npf.apps.googleusercontent.com">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
