--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,29 @@
   <meta name="google-signin-client_id" content="470422928140-qn6tf5ltoehpua9uasvl0585o2kf0npf.apps.googleusercontent.com">
 </head>
 <body>
+  <!-- <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyD0hKbmfi8ylx0yD-RqzLatAhOPmHg0Xmc",
+      authDomain: "voice-mate-860.firebaseapp.com",
+      projectId: "voice-mate-860",
+      storageBucket: "voice-mate-860.firebasestorage.app",
+      messagingSenderId: "152377724389",
+      appId: "1:152377724389:web:2a84e407ae5d9501d7b30c",
+      measurementId: "G-W9R83533P5"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    // const analytics = getAnalytics(app);
+  </script> -->
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
